<?xml version="1.0"?>
<package format="3">
  <name>f1tenth</name>
  <version>0.1.0</version>
  <description>MPCC controller for RC cars</description>
  <maintainer email="prachitamin12@gmail.com">prachit</maintainer>
  <license>Apache-2.0</license>

  <!-- Use ament_python as the build tool for a pure Python package -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Only include exec dependencies needed for your Python node -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Remove dependencies which are specific to C++ if not used -->
  <!-- If you need additional dependencies for your Python node, add them here -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Declare the package build type explicitly -->
    <build_type>ament_python</build_type>
  </export>
</package>
